# paw

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile.in  README.md  paw.cpp
.github/workflows/: ci.yaml  ci_linux.yaml
cmake/: SimdppMultiarch.cmake
examples/: CMakeLists.txt  ex1_basic_usage.cpp  ex2_simple.cpp  ex3_subcommand.cpp  ex4_boost_filesystem.cpp  implementions.cpp
examples/align/: CMakeLists.txt  align_ex1_msa.cpp  align_ex2_libsimdpp.cpp  align_ex3_tests.cpp  align_ex4_input_sequences.cpp  align_ex5_graphs.cpp  align_ex6_variant_break_down.cpp  align_ex7_ref_align.cpp  align_ex8_ext_tests.cpp  ex1_msa.cpp  ex2_libsimdpp.cpp  ex3_benchmarks.cpp  ex4_input_sequences.cpp
examples/parser/: CMakeLists.txt  ex1_basic_usage.cpp  ex2_simple.cpp  ex3_subcommand.cpp  ex4_boost_filesystem.cpp
examples/station/: CMakeLists.txt  generate_random_ints_and_sort_them.cpp  read_integers_from_file.hpp  read_ints_and_keep_primes_only.cpp
include/: paw.hpp  pawparser.hpp
include/boost/simd/algorithm/: find_if.hpp
include/boost/simd/range/detail/: segment.hpp
include/paw/: align.hpp  parser.hpp  station.hpp
include/paw/align/: aligner_options.hpp  alignment_cache.hpp  alignment_ext_cache.hpp  alignment_options.hpp  alignment_results.hpp  backtracker.hpp  boost_simd_align.hpp  cigar.hpp  event.hpp  fasta.hpp  global_alignment.hpp  global_alignment_score.hpp  libsimdpp_align.hpp  libsimdpp_backtracker.hpp  libsimdpp_row.hpp  libsimdpp_utils.hpp  pairwise_alignment.hpp  pairwise_ext_alignment.hpp  row.hpp  seq_it.hpp  sequence_utils.hpp  skyr.hpp  variant.hpp  vcf.hpp
include/paw/internal/: _config.hpp  config.hpp
include/paw/parser/: exception.hpp  internal.hpp  parser.hpp
include/paw/station/: algorithm.hpp  join.hpp  partition_iterator.hpp  split.hpp  station.hpp  station_options.hpp  worker_queue.hpp
include/paw/station/internal/: algorithm_help_functions.hpp  data_simulation.hpp
include/simdpp/detail/insn/: cmp_neq.h
src/: align.cpp  paw.cpp
test/: CMakeLists.txt  main.cpp  test_pawparser.cpp
test/align/: CMakeLists.txt  test_align.cpp  test_simdpp_align.cpp
test/boost.simd/: CMakeLists.txt
test/boost.simd/api/: CMakeLists.txt  algorithm.cpp  common.hpp  includes.cpp
test/boost.simd/api/algorithm/: all_of.cpp  f_struct.hpp  help_structures.hpp  test_all_of.cpp  test_all_of.hpp  test_any_of.cpp  test_any_of.hpp  test_copy.cpp  test_copy.hpp  test_copy_n.cpp  test_copy_n.hpp  test_count.cpp  test_count.hpp  test_count_if.cpp  test_count_if.hpp  test_equal.cpp  test_fill.cpp  test_fill.hpp  test_find.cpp  test_find.hpp  test_find_if.cpp  test_find_if.hpp  test_find_if_not.cpp  test_find_if_not.hpp  test_generate.cpp  test_generate.hpp  test_generate_n.cpp  test_iota.cpp  test_iota.hpp  test_lexicographical_compare.cpp  test_lexicographical_compare.hpp  test_max_element.cpp  test_max_element.hpp  test_max_val.cpp  test_max_val.hpp  test_min_element.cpp  test_min_element.hpp  test_min_val.cpp  test_min_val.hpp  test_none_of.cpp  (+9 more)
test/boost.simd/api/function/: test_abs.cpp
test/boost.simd/api/helper/: test_logical.cpp  test_mask.cpp
test/data/: MT-human.fa  indel_snp.fa  msa.seq  msat_snp.fa  split_var_test1.fa
test/include/: catch.hpp
test/parser/: CMakeLists.txt  test_pawparser.cpp
test/station/: CMakeLists.txt  test_all_of.cpp  test_any_of.cpp  test_count.cpp  test_count_if.cpp  test_fill.cpp  test_for_each.cpp  test_internal.cpp  test_none_of.cpp  test_partition_iterator.cpp  test_sort.cpp  test_split.cpp
